--- a/Anex.html
+++ b/Anex.html
@@ -36,10 +36,8 @@
                 
            <script src="jquery.min.js"></script>
            <script src="owl.carousel.min.js"></script>
-
            <script>
-            
-             var owl = $('.owl-carousel');
+                   var owl = $('.owl-carousel');
                             owl.owlCarousel({
                             items:1,
                             loop:true,
@@ -104,7 +102,7 @@
                                 <p>For this purpose Anax is engaged in the marketing and sale of pharmaceutical products across the India.</p>
                                 <p>Anax is highly professional and performance driven organisation that aims to provide the highest quality heathcare products for doctors and patient, whilst maintaining a high ethical standard in business operation.</p>
                                 <p>We manufactured our products at USFDA, WHO-GMP certified facilities to provide best quality products.</p>
-                                <p>The major segmentzs are NEUROLOGY, CARDIO-DIABETIC, GYNEC and ORTHO. We believe in providing innovative solutions to healthcare problems and possess an entrepreneurial culture to build divisions and products for the same. We retain a specialty marketing process in the indian pharma industry through our structure of customer-dedicated marketing teams and comprehensive product portfolios.</p>
+                                <p>The major segmentz s are NEUROLOGY, CARDIO-DIABETIC, GYNEC and ORTHO. We believe in providing innovative solutions to healthcare problems and possess an entrepreneurial culture to build divisions and products for the same. We retain a specialty marketing process in the indian pharma industry through our structure of customer-dedicated marketing teams and comprehensive product portfolios.</p>
                             </div>
                         </div>
                     </div>  
@@ -283,7 +281,7 @@
                     <li>Privacy Policy</li>
                 </ul>
                 </div>
-                <div class="col-7">
+                <div class="col-7">-
                     <h1>PRODUCT SEGMENT</h1>
                    <p>STROKE MANAGEMENT <br>
                     MALE SUBFERTILITY <br>
